--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "mandelbrot"
 version = "0.1.0"
 authors = ["Andrew Aylett <andrew@aylett.co.uk>"]
+edition = "2018"
 
 [dependencies]
 image = "0.13.*"
