--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,10 @@ num-traits = "0.2.8"
 thiserror = "1.0.26"
 anyhow = "1.0.43"
 
+[dependencies.structopt]
+version = "~0.3"
+features = ["wrap_help"]
+
 [dev-dependencies]
 criterion = "0.3.5"
 iai = "0.1.1"
