--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ num-traits = "0.2.8"
 thiserror = "1.0.26"
 anyhow = "1.0.43"
 rayon = "1.5.1"
+itertools = "0.10.1"
 
 [dependencies.structopt]
 version = "~0.3"
