--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ thiserror = "1.0.26"
 anyhow = "1.0.43"
 rayon = "1.5.1"
 itertools = "0.10.1"
+lazy_static = "1.4.0"
 
 [dependencies.structopt]
 version = "~0.3"
